service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicio-crud
  labels:
    app: productos
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: productos
    tier: frontend
