service-bd.yaml
apiVersion: v1                 
kind: Service                    
metadata:
  name: crud-db             
  labels:                        
    app: bd-crud                   
    tier: backend
spec:
  type: NodePort
  ports:                        
  - port: 3306
    targetPort: 3306
    protocol: TCP
  selector:                      
    app: bd-crud
    tier: backend
