ingress.yaml
apiVersion: networking.k8s.io/v1            
kind: Ingress                                       
metadata:
  name: ingress-conf                           
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  
spec:
  rules:
  - host: app.alango.com                      
    http: 
      paths:
      - path: /
        pathType: Prefix                           
        backend:
          service:
            name: servicio-crud                       
            port:
              number: 80
